<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bLletraDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="lanzarLletraDNI"
        android:padding="10dp"
        android:text="@string/botoLletra"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bArrel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="lanzarArrel"
        android:padding="10dp"
        android:text="@string/botoArrel"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bConversor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="lanzarConversor"
        android:padding="10dp"
        android:text="@string/botoConversor"
        android:textSize="18sp" />
</LinearLayout>