<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/titolConv"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spUsu"
        android:layout_width="147dp"
        android:layout_height="28dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bCalcularMoneda"
        android:layout_width="348dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:onClick="conversor"
        android:text="@string/botoCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRes" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginTop="64dp"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="@+id/txtUsuari"
        app:layout_constraintStart_toStartOf="@+id/txtUsuari"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuari" />

    <Spinner
        android:id="@+id/spRes"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/spUsu"
        app:layout_constraintStart_toStartOf="@+id/spUsu"
        app:layout_constraintTop_toBottomOf="@+id/spUsu" />

    <EditText
        android:id="@+id/txtUsuari"
        android:layout_width="159dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="64dp"
        android:onClick="lanzarAtras"
        android:text="@string/bArrere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>